# dotfiles

./: .gitmodules  bashrc  license.py  tmux.conf  vimrc
cpp/: CMakeLists.txt
nvim/: .gitignore  dein.toml  init.vim
templates/: CMakeLists.txt  format.tex  template.md
